src/test/ui/span/borrowck-call-method-from-mut-aliasable.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-call-method-from-mut-aliasable.rs:17:5
   |
LL | fn b(x: &Foo) {
   |         ---- help: consider changing this to be a mutable reference: `&mut Foo`
LL |     x.f();
LL |     x.h();
   |     ^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
